# PerturbFlow

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
aws/: README.md  batch_job_definition.json
docker/: .dockerignore  Dockerfile  environment.yml
docs/: architecture.md  cookbook.md  methodology.md
examples/: README.md  cellranger_to_perturbflow.ipynb  replogle2022_real_data.ipynb  replogle2022_walkthrough.ipynb
src/perturbflow/: __init__.py  _version.py  adapters.py  cli.py  config.py  de.py  downstream.py  guide_assignment.py  io.py  perturbation_analysis.py  pipeline.py  provenance.py  qc.py  report.py  stages.py  validation.py
tests/: conftest.py  test_adapters.py  test_cli.py  test_config.py  test_de.py  test_doublets.py  test_downstream.py  test_guide_assignment.py  test_io.py  test_pertpy_parity.py  test_perturbation_analysis.py  test_pipeline.py  test_qc.py  test_report.py  test_stages.py  test_synthetic_fixture.py  test_validation.py
tests/fixtures/: make_synthetic.py
workflow/: Snakefile  config.yaml
