[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "perturbflow"
version = "0.1.0"
description = "Opinionated, reproducible Perturb-seq analysis pipeline: guide assignment, Mixscape-style escape detection, pseudobulk DE, pathway scoring."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Amit Shenoy" }]
keywords = [
    "perturb-seq",
    "crispr-screen",
    "single-cell",
    "functional-genomics",
    "scanpy",
    "mixscape",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "anndata>=0.10",
    "scanpy>=1.10",
    "numpy>=1.26,<3",
    "pandas>=2.1",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "pyarrow>=14",
    "click>=8.1",
    "tqdm>=4.66",
]

[project.optional-dependencies]
# pertpy >=1.1 fixed sklearn-1.6+ array-api compat; filelock is a
# transitive that's not pulled in on every Python minor version.
mixscape = ["pertpy>=1.1", "filelock>=3.13"]
de = ["pydeseq2>=0.4"]
pathways = ["decoupler>=1.6", "omnipath>=1.0"]
workflow = ["snakemake>=8"]
all = [
    "pertpy>=1.1",
    "filelock>=3.13",
    "pydeseq2>=0.4",
    "decoupler>=1.6",
    "omnipath>=1.0",
    "snakemake>=8",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.5",
    "mypy>=1.8",
    "types-PyYAML",
    "pandas-stubs",
    "ipykernel>=6.29",
    "nbconvert>=7.16",
]

[project.scripts]
perturbflow = "perturbflow.cli:main"

[project.urls]
Homepage = "https://github.com/xX-its-amit-Xx/PerturbFlow"
Repository = "https://github.com/xX-its-amit-Xx/PerturbFlow"
Issues = "https://github.com/xX-its-amit-Xx/PerturbFlow/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/perturbflow"]

[tool.hatch.build.targets.sdist]
include = [
    "src/perturbflow",
    "workflow",
    "docker",
    "aws",
    "tests",
    "README.md",
    "LICENSE",
]

# ---------- Ruff ----------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
    "N",   # pep8-naming
    "C4",  # comprehensions
]
ignore = [
    "E501",   # handled by formatter
    "N803",   # arg name should be lowercase (allow `X`, `Y` for matrices)
    "N806",   # variable in function should be lowercase (allow `X`, `Y`)
    "RUF001", # ambiguous unicode in strings (× is intentional in scientific text)
    "RUF002", # ambiguous unicode in docstrings (× is intentional in scientific text)
    "RUF003", # ambiguous unicode in comments (× is intentional in scientific text)
    "B007",   # unused loop var allowed when pattern-matching tuples
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "N802"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------- mypy ----------
[tool.mypy]
python_version = "3.12"
strict = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
no_implicit_optional = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
files = ["src/perturbflow"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
check_untyped_defs = false

# ---------- pytest ----------
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=perturbflow",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with -m 'not slow')",
    "integration: end-to-end pipeline tests on the synthetic fixture",
    "requires_pertpy: skipped if pertpy is not installed",
    "requires_pydeseq2: skipped if pydeseq2 is not installed",
    "requires_decoupler: skipped if decoupler is not installed",
]
filterwarnings = [
    "ignore::DeprecationWarning:anndata.*",
    "ignore::FutureWarning:anndata.*",
    "ignore::FutureWarning:scanpy.*",
]

[tool.coverage.run]
source = ["src/perturbflow"]
branch = true
omit = ["src/perturbflow/_version.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
